pve-cluster (4.0-8) unstable; urgency=medium

  * allow unpriviledged users to read lxc configuration

 -- Proxmox Support Team <support@proxmox.com>  Thu, 16 Apr 2015 07:15:31 +0200

pve-cluster (4.0-7) unstable; urgency=medium

  * track configuration changes inside lxc subdirectories

 -- Proxmox Support Team <support@proxmox.com>  Fri, 10 Apr 2015 08:31:12 +0200

pve-cluster (4.0-6) unstable; urgency=medium

  * observe more files (improve change tracking)

 -- Proxmox Support Team <support@proxmox.com>  Fri, 27 Mar 2015 10:54:53 +0100

pve-cluster (4.0-5) unstable; urgency=medium

  * fix tracking of corosync configuration changes

 -- Proxmox Support Team <support@proxmox.com>  Fri, 20 Mar 2015 09:43:14 +0100

pve-cluster (4.0-4) unstable; urgency=medium

  * fix corosync cmap reader

 -- Proxmox Support Team <support@proxmox.com>  Wed, 18 Mar 2015 15:08:48 +0100

pve-cluster (4.0-3) unstable; urgency=medium

  * use systemctl to start/stop services

 -- Proxmox Support Team <support@proxmox.com>  Fri, 13 Mar 2015 11:35:00 +0100

pve-cluster (4.0-2) unstable; urgency=medium

  * fix perl api dependency (perlapi-5.20.0)

 -- Proxmox Support Team <support@proxmox.com>  Mon, 09 Mar 2015 06:44:45 +0100

pve-cluster (4.0-1) unstable; urgency=medium

  * updated for Debian Jessie

  * use corosync votequorum instead of cman

  * add systemd support
  
  * depend on glib >= 2.42

  * depend on corosync => 2.3.4

  * depend on libqb 0.17.1-1

 -- Proxmox Support Team <support@proxmox.com>  Mon, 23 Feb 2015 16:11:23 +0100

pve-cluster (3.0-17) unstable; urgency=low

  * add ability to update cfs locks

 -- Proxmox Support Team <support@proxmox.com>  Thu, 19 Feb 2015 11:56:06 +0100

pve-cluster (3.0-16) unstable; urgency=low

  * recompile, and include new package with debug information

 -- Proxmox Support Team <support@proxmox.com>  Mon, 09 Feb 2015 17:11:00 +0100

pve-cluster (3.0-15) unstable; urgency=low

  * datacenter.cfg: add new email_from option
